# ReKat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat
Cmake/: CMakeLists.txt  Included.cmake  Library.cmake
Code/Include/: ReKat.hpp  debugger.hpp  engine.hpp  objekt.hpp
Code/Include/Engine_Rework/: debugger.hpp  engine.hpp  objekt.hpp
Code/Include/Engine_Rework/graphik/: components.hpp  graphik.hpp
Code/Include/Engine_Rework/online/: online.hpp
Code/Include/Engine_Rework/phisiks/: components.hpp  timer.hpp
Code/Include/Engine_Rework/synth/: synth.hpp
Code/Include/Engine_Rework/utility/: list.h  printer.h
Code/Include/Graphik/: animator.h  behaviour.h  button.h  camera.h  collision.h  framebuffer.h  graphik.hpp  graphik_debugger.hpp  manager.h  math.h  model.h  object.h  object_UI.h  objekt.h  scene.h  shader.h  sprite.h  text.h  texture.h  tilemap.h
Code/Include/Graphik/Components/: _catalog.hpp  button.h  camera.h  catalog.hpp  collision.h  fps.h  phisiks.h  rigidbody.h  sprite.h  tilemap.h
Code/Include/Graphik/Resources/: font.h  manager.hpp  shader.h  text.h  texture.h
Code/Include/Graphik/Utility/: list.h  math.h
Code/Include/Graphik/__OLD/: __collision.h  _object.h  animator.h  behaviour.h  colors.h  list.h  manager.h  math.h  objekt.h  scene.h  sprite.h  text.h  texture.h
Code/Include/Online_P/: 1.online.md  common.hpp  crypt_core.hpp  crypt_math.hpp  online.windows.hpp
Code/Include/Online_S/: 1.online.md  common.hpp  online.apple.hpp  online.linux.hpp  online.windows.hpp
Code/Include/Synth/: api.hpp  divide.hpp  fft.h  sillabator.hpp  synth.hpp  synth_debugger.hpp  wave_mod.hpp
Code/Include/Synth/FFT/: Clear.h  FastFourierTransform.cpp  FastFourierTransform.h  LICENSE  test.h
Code/Include/Synth/_OLD/: audio.hpp  creat_libs.hpp  defines.h  save_wav.hpp  setup_envoirment.hpp  state_manger.hpp
Code/Include/Synth/components/: audio_listener.h  audio_source.h
Code/Include/Synth/resources/: buffer.h  manager.hpp  source.h
Code/Include/animation/: animator.hpp
Code/Include/graphik/: components.hpp  graphik.hpp
Code/Include/graphik/components/: button.h  camera.h
Code/Include/graphik/resources/: font.h  manager.hpp  texture.h
Code/Include/online/system-specific-implementation/: online.linux.hpp  online.refernce.hpp
Code/Include/phisiks/: components.hpp  phisiks.hpp  timer.hpp
Code/Include/phisiks/components/: collision.h  primitive_colliders.h  rigidbody.h  tilemap_collider.h
Code/Include/synth/: audioFile.h  components.hpp
Code/Include/synth/components/: audio_listener.h  audio_source.h
Code/Include/synth/resources/: manager.hpp
Code/Include/utility/: color.h  interpolation.h  list.h  math.h  printer.h
Code/Src/: controlls.hpp  file_manager.hpp  global.h  load.hpp  main.cpp  player.h  render.hpp
Code/Src/Enemies/: enemy.h  gobelino.h
Code/Src/Engine/: controlls.h  dungeon.h  dungeon_special.h  load.h  player.h
Code/Src/Engine/Enemies/: enemy.h  gobelino.h
Code/Src/Online/: connection.h  load.h
Code/Test/: audio_text.cpp  collison_test.cpp
Code/_Src/: command.hpp  connection.hpp  controlls.hpp  global.hpp  load.hpp  main.cpp  render.hpp
Code/_Src/Enemies/: enemy.h  gobelino.h
Docs/: ReKat.tex  storia.md
Docs/eng/: ReKat.tex
Docs/it/: ReKat.tex
Docs/it/Presentazione/: index.css  index.html  index.js
Docs/it/Presentazione/_OLD/: index.css  index.html  index.js  vars.css
Projekts/Clique/: com.h  gobleino.h  load.h  main.cpp  player.h  speels.h
Projekts/Clique copy/: camera_controll.h  gobleino.h  load.h  player.h
Projekts/Clique copy/Resources/: t.csv
Projekts/Clique copy/Resources/Shaders/: tilemap.vs
Projekts/Clique/Resources/: tilemap.c.csv  tilemap.csv  tilemap_Livello tile 1.csv
Projekts/Clique/Resources/Maps/: Dungeon.csv  Dungeon.tmx
Projekts/Clique/Resources/Shaders/: tilemap.fs
Projekts/Clique/Scripts/: Camera_Controll.h  Life_display.h  Player.h
Projekts/Clique/Scripts/Dungeon/: Dungeon.h  (+1 more)
Projekts/Clique_Rework/: clique.kat  load.h  main.cpp
Projekts/Clique_Rework/Scripts/: Camera_Controll.h  Life_display.h  Player.h  hello_world.h
Projekts/Engine_Rework/: main.cpp
Projekts/Fourier/: main.cpp
Projekts/Fourier/Resources/: plot.py
Projekts/Kat/: divide.hpp  load.h  main.cpp  plot.py  synth.h
Projekts/Kat_old/: divide.hpp
Projekts/Le_Gaym/: main.cpp
Projekts/Le_Gaym copy/: global.h
Projekts/Le_Gaym copy/Engine/: camera.h  load.h  mouseponter.h  player.h  speels.h
Projekts/Le_Gaym/Engine/: controlls.h  dialog.h  dungeon.h  load.h  player.h  scene.kat  speels.h
Projekts/Le_Gaym/Online/: connection.h  load.h
Projekts/Pong/: load.h  main.cpp
Projekts/Pong/Resources/: bar.fs  bar.vs  framebuffers.fs  point.fs  sprite.fs
Projekts/Test/: audio_text.cpp  load.h  main.cpp
Projekts/Test/Resources/: font.vs  sprite.vs
Projekts/fluid/: fluid.kat  load.h  main.cpp  simulation.h  simulation_render.h  velocity_simulation.h
Projekts/fluid/Resources/: render.fs
Projekts/karser/: main.cpp  main1.cpp
Projekts/karser/Resources/: test.scene.kat
Projekts/simulation/: camera_controll.h  gravitate.h  load.h  load1.h  main.cpp
Projekts/simulation/Resources/: framebuffers.fs
Resources/Le_Gaym/Shaders/: framebuffer.fs
Resources/Shaders/: sprite_animation.fs  text.fs  text.vs
Test/Button_Test/: main.cpp
Test/Button_Test/Resources/: text.vs
Test/Collision_Test/: main.cpp
Test/Core_Test/: main.cpp
Test/Debugger_Test/: main.cpp
Test/Generic_Test/: main.cpp
Test/Phisiks_Test/: main.cpp
Test/Pong_Test/: main.cpp
Test/Pong_Test/Resources/: sprite.vs
Test/Render_Test/: main.cpp
Test/Synth_Test/: main.cpp
Test/Text_Display_Test/: main.cpp
Test/Text_Display_Test/Resources/: text.fs
Utility/: new_comp.cpp  new_component.cpp  new_proj.cpp  new_projekt.cpp  run_katengine.cpp
(+69 files in other folders)
